Add unit test
Add documentation for REST API v1.0
Remove any references of non API package of bitbucket-branch-source plugin